--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron-wallpaper",
+  "name": "electron-window-desktop",
   "version": "0.0.3",
   "description": "Node module that allows you to attach a window as wallpaper in Windows.",
   "main": "lib/electron-wallpaper.js",
-  "homepage": "https://github.com/robinwassen/electron-wallpaper",
+  "homepage": "https://github.com/Alecyrus/electron-window-desktop",
   "gypfile": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/robinwassen/electron-wallpaper.git"
+    "url": "git://github.com/Alecyrus/electron-window-desktop.git"
   },
   "keywords": [
     "window",
